[package]
name = "qmk-layout-to-keyberon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1"
keyberon-layout-serde = { path = "../keyberon-layout-serde" }
log = "0.4"
lovely_env_logger = "0.6"
