[package]
name = "qmk-layout-to-keyberon"
version = "0.1.0"
edition = "2021"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
keywords = ["keyberon", "qmk", "serde", "convertion"]
readme = "README.md"
description = "Translate QMK layout into keyberon layout"
repository = "https://github.com/borisfaure/qmk-layout-to-keyberon"

[dependencies]
clap = "4.1"
keyberon-layout-serde = { git = "https://github.com/borisfaure/keyberon-layout-serde", branch = "main"}
log = "0.4"
lovely_env_logger = "0.6"
